--- a/cider-ci/jobs/feature-tests/scripts/test.yml
+++ b/cider-ci/jobs/feature-tests/scripts/test.yml
@@ -1,12 +1,11 @@
 test:
   body: |
+    #!/usr/bin/env bash
     set -eux
-    ruby -v
+    export PATH=$(pwd)/vendor/jruby/bin/:$(ruby -e "puts ENV['PATH'].split(':').reject{|s| s.match(/\.rbenv/)}.join(':')")
     bundle exec rspec $CIDER_CI_TASK_FILE
   start-when: # this must a map, not array, so it can be extended
     create-database:
       script: create-database
     start-vnc:
       script: start-xvnc
-    bundle:
-      script: bundle
