--- a/cider-ci/jobs/meta-checks.yml
+++ b/cider-ci/jobs/meta-checks.yml
@@ -11,7 +11,7 @@ jobs:
     run-on:
     - type: branch
       include-match: ^.*$
-      exclude-match: ^.*no-ci.*$
+      exclude-match: ^(.*no-ci.*)|([a-z]*_wip_.*)$
 
     context:
       task-defaults:
