--- a/cider-ci/jobs/code-checks.yml
+++ b/cider-ci/jobs/code-checks.yml
@@ -12,7 +12,7 @@ jobs:
     run-on:
     - type: branch
       include-match: ^.+$
-      exclude-match: ^.*no-ci.*$
+      exclude-match: ^(.*no-ci.*)|([a-z]*_wip_.*)$
 
     context:
 
