--- a/cider-ci/jobs/feature-tests.yml
+++ b/cider-ci/jobs/feature-tests.yml
@@ -16,7 +16,7 @@ jobs:
     run-on:
     - type: branch
       include-match: ^.+$
-      exclude-match: ^.*no-ci.*$
+      exclude-match: ^(.*no-ci.*)|([a-z]*_wip_.*)$
 
 
     depends-on:
