feat: ui: Set show and edit metadata
Author:    phiku <philipp.kuederli@zhdk.ch>
Date:      Mon May 2 17:56:52 2016 +0200

squashed with

commit ef58c7939c7a7465796123b14efcce72998cafc1
Author: Max Albrecht <max.albrecht@zhdk.ch>
Date:   Sat May 7 12:29:31 2016 +0200

    fixup! feat: ui: Set show and edit metadata

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -58,6 +58,9 @@ Metrics/LineLength:
 # Configuration parameters: CountComments.
 Metrics/MethodLength:
   Max: 20
+  Exclude:
+    # NOTE: presenters are long by design, they contain lots of data structures
+    - 'app/presenters/presenters/**/*'
 
 Metrics/ParameterLists:
   Max: 12
