routes: Keywords, People, Licenses (filtered index redirect)
removes person#show page for consistency

controller helper 'redirect_to_filtered_index'
extracted from 'search'

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -183,6 +183,10 @@ Rails/ReadWriteAttribute:
 Rails/Validation:
   Enabled: false
 
+Performance/TimesMap:
+  Exclude:
+    - 'spec/**/*'
+
 # NEW CONFIG SINCE VERSION > 0.29.1
 
 Style/MultilineMethodCallIndentation:
