--- a/cider-ci/jobs/code-checks.yml
+++ b/cider-ci/jobs/code-checks.yml
@@ -36,6 +36,7 @@ jobs:
             environment-variables:
               RAILS_ENV: test
               LANG: "en_US.UTF-8"
+              RBENV_VERSION: '2.2.4'
 
           tasks:
 
