ui: dev: use browserify directly instead of sprockets
decreases recompilation time of JS from ~30s to ~0.3s

--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "npm run -s watch",
+    "watch": "npm run -s watch:app & npm run -s watch:server",
+    "build": "npm run -s build:app && npm run -s build:server && npm run -s build:integration",
+    "watch:app": "watchify app/assets/javascripts/application.coffee -v -o app/assets/javascripts/dev-bundle.js",
+    "watch:server": "watchify app/assets/javascripts/react-server-side.js -v -o app/assets/javascripts/dev-bundle-react-server-side.js",
+    "build:app": "browserify app/assets/javascripts/application.coffee -d -v -o app/assets/javascripts/bundle.js",
+    "build:server": "browserify app/assets/javascripts/react-server-side.js -d -v -o app/assets/javascripts/bundle-react-server-side.js",
+    "build:integration": "browserify app/assets/javascripts/integration-testbed.coffee -d -v -o app/assets/javascripts/bundle-integration-testbed.js",
     "test": "npm run -s lint && npm run -s test:jest",
     "test:jest": "jest",
     "lint": "bash -c 'npm run -s coffeelint -- --quiet app/assets/javascripts/{*.coffee,**/*.{coffee,cjsx}} && npm run -s standardlint -- {.,**}/*.js'",
@@ -54,19 +62,20 @@
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
     "big-list-of-naughty-strings": "1.0.0",
-    "cheerio": "^0.20.0",
-    "coffee-react": "^4.1.0",
-    "coffee-react-transform": "3.3.0",
-    "coffeelint": "^1.14.2",
-    "jest-cli": "*",
-    "react-addons-test-utils": "~0.14.0",
     "brfs": "^1.4.3",
     "browserify": "^11.2.0",
     "browserify-incremental": "3.0.1",
     "bulkify": "1.1.1",
+    "cheerio": "^0.20.0",
+    "coffee-react": "^4.1.0",
+    "coffee-react-transform": "3.3.0",
+    "coffee-reactify": "4.0.0",
+    "coffeelint": "^1.14.2",
+    "jest-cli": "*",
+    "react-addons-test-utils": "~0.14.0",
     "reactify": "1.1.1",
     "standard": "^6.0.7",
-    "coffee-reactify": "4.0.0"
+    "watchify": "^3.7.0"
   },
   "browserify": {
     "transform": [
