app: remove browserify-rails sprockets integration
- sprockets now only handles pre-bundled JS
- removes gems browserify-rails, coffee-rails

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "private": true,
   "scripts": {
     "start": "npm run -s watch",
-    "watch": "npm run -s watch:app & npm run -s watch:server",
-    "build": "npm run -s build:app && npm run -s build:server && npm run -s build:integration",
-    "watch:app": "watchify app/assets/javascripts/application.coffee -v -o app/assets/javascripts/dev-bundle.js",
-    "watch:server": "watchify app/assets/javascripts/react-server-side.js -v -o app/assets/javascripts/dev-bundle-react-server-side.js",
-    "build:app": "browserify app/assets/javascripts/application.coffee -d -v -o app/assets/javascripts/bundle.js",
-    "build:server": "browserify app/assets/javascripts/react-server-side.js -d -v -o app/assets/javascripts/bundle-react-server-side.js",
-    "build:integration": "browserify app/assets/javascripts/integration-testbed.coffee -d -v -o app/assets/javascripts/bundle-integration-testbed.js",
+    "watch": "mkdir -p public/assets/bundles && npm run -s watch:app & npm run -s watch:server",
+    "build": "mkdir -p public/assets/bundles && npm run -s build:app && npm run -s build:server && npm run -s build:integration",
+    "watch:app": "watchify app/assets/javascripts/application.coffee -d -v -o public/assets/bundles/dev-bundle.js",
+    "watch:server": "watchify app/assets/javascripts/react-server-side.js -d -v -o public/assets/bundles/dev-bundle-react-server-side.js",
+    "build:app": "browserify app/assets/javascripts/application.coffee -v -o public/assets/bundles/bundle.js",
+    "build:server": "browserify app/assets/javascripts/react-server-side.js -v -o public/assets/bundles/bundle-react-server-side.js",
+    "build:integration": "browserify app/assets/javascripts/integration-testbed.coffee -v -o public/assets/bundles/bundle-integration-testbed.js",
     "test": "npm run -s lint && npm run -s test:jest",
     "test:jest": "jest",
     "lint": "bash -c 'npm run -s coffeelint -- --quiet app/assets/javascripts/{*.coffee,**/*.{coffee,cjsx}} && npm run -s standardlint -- {.,**}/*.js'",
