--- a/cider-ci/jobs/unit-tests.yml
+++ b/cider-ci/jobs/unit-tests.yml
@@ -31,8 +31,9 @@ jobs:
               traits: { nodejs: true }
               scripts:
                 test:
-                  timeout: 6 Minutes
+                  timeout: 10 Minutes
                   body: |
+                    set -exu
                     mv public/assets tmp/static_assets
                     bin/precompile-assets
                     cider-ci/bin/check-precompiled-assets tmp/static_assets public/assets
