--- a/cider-ci/jobs/wip_unit-tests.yml
+++ b/cider-ci/jobs/wip_unit-tests.yml
@@ -14,3 +14,5 @@ jobs:
     context:
       task-defaults:
         max-auto-trials: 2
+        environment-variables:
+          MADEK_NO_STATIC_ASSETS: true
