chore: ui: react: cleanup
see comments in `react/index.coffee`

$ tree app/assets/javascripts/react
app/assets/javascripts/react
├── decorators
│   ├── BatchResourceMetaDataForm.cjsx
│   ├── MediaEntryPreview.cjsx
│   ├── MediaResourcesBox.cjsx
│   ├── ResourceMetaDataForm.cjsx
│   ├── ResourcePermissions.cjsx
│   ├── ResourceThumbnail.cjsx
│   └── ResourcesBatchBox.cjsx
├── index.coffee
├── lib
│   ├── AsyncDashboardSection.cjsx
│   ├── autocomplete.cjsx
│   ├── decorate-resource-names.coffee
│   ├── file-dropbox.cjsx
│   ├── forms
│   │   ├── form-label.cjsx
│   │   ├── input-field-text.cjsx
│   │   ├── input-resources.cjsx
│   │   ├── input-text.cjsx
│   │   ├── inputs-by-type.cjsx
│   │   └── rails-form.cjsx
│   ├── input-meta-datum.cjsx
│   ├── madek-prop-types.coffee
│   ├── meta-datum-inline-edit-poc.cjsx
│   └── ui.coffee
├── ui-components
│   ├── ActionsBar.cjsx
│   ├── AskModal.cjsx
│   ├── Button.cjsx
│   ├── ButtonGroup.cjsx
│   ├── DropdownButton.cjsx
│   ├── DropdownMenu.cjsx
│   ├── FilterBar.cjsx
│   ├── Icon.cjsx
│   ├── Link.cjsx
│   ├── MediaPlayer.cjsx
│   ├── Modal.cjsx
│   ├── Picture.cjsx
│   ├── Preloader.cjsx
│   ├── SideFilter.cjsx
│   ├── Thumbnail.cjsx
│   ├── index.coffee
│   └── propTypes.coffee
└── views
    ├── Collection
    │   ├── AskDelete.cjsx
    │   ├── Detail.cjsx
    │   ├── Metadata.cjsx
    │   ├── Relations.cjsx
    │   ├── ResourceSelection.cjsx
    │   └── SelectCollection.cjsx
    ├── CollectionShow.cjsx
    ├── MediaEntry
    │   ├── Export.cjsx
    │   └── Uploader.cjsx
    └── My
        └── CreateCollection.cjsx

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:server": "browserify app/assets/javascripts/react-server-side.js -v -o public/assets/bundles/bundle-react-server-side.js",
     "build:integration": "browserify app/assets/javascripts/integration-testbed.coffee -v -o public/assets/bundles/bundle-integration-testbed.js",
     "test": "npm run -s lint",
-    "lint": "bash -c 'npm run -s coffeelint -- --quiet app/assets/javascripts/{*.coffee,**/*.{coffee,cjsx}} && npm run -s standardlint -- {.,**}/*.js'",
+    "lint": "bash -c 'npm run -s coffeelint -- --quiet app/assets/javascripts/**/*.coffee app/assets/javascripts/react/**/*.cjsx && npm run -s standardlint -- {.,**}/*.js'",
     "devtools": "npm run -s build-devtools && coffee --nodejs \"-r ./tmp/devtools.js\"",
     "devtools-js": "npm run -s build-devtools && node -r ./tmp/devtools.js",
     "build-devtools": "npm run -s browserify -- app/assets/javascripts/developer-tools.coffee > tmp/devtools.js",
