--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "hogan.js": "3.0.2",
     "jquery": "^2.2.1",
     "jquery-ujs": "^1.2.0",
+    "linkifyjs": "^2.0.0-beta.9",
     "local-links": "1.4.0",
     "moment": "^2.11.2",
     "pdfjs-dist": "^1.4.95",
