--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@eins78/typeahead.js": "0.11.2-pre.1",
     "active-lodash": "1.2.2",
+    "ampersand-app": "^2.0.0",
     "ampersand-model": "6.0.2",
     "ampersand-react-mixin": "github:eins78/ampersand-react-mixin#1e7b0c4",
     "ampersand-rest-collection": "5.0.0",
