chore: lint: adjust rubocop config
now allows this

```rb
some_variable = if foo.nil?
  "no foo!"
end
```

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,9 @@ AllCops:
     - 'zhdk-integration/**/*'
     - 'vendor/**/*'
 
+Lint/EndAlignment:
+  AlignWith: variable
+  
 Lint/AmbiguousOperator:
   Enabled: false
 
