--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-file-drop": "^0.1.8",
+    "react-waypoint": "^3.1.0",
     "rusha": "0.8.3",
     "underscore.string": "^3.3.4",
     "uuid-validate": "0.0.2",
