--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "po2json": "0.4.1",
     "qs": "^6.1.0",
     "react": "^15.0.2",
+    "react-bootstrap": "^0.30.2",
     "react-dom": "^15.0.2",
     "react-file-drop": "^0.1.8",
     "react-waypoint": "^3.1.0",
