--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "start": "npm run -s watch",
     "watch": "mkdir -p public/assets/bundles && npm run -s watch:app & npm run -s watch:server",
     "build": "mkdir -p public/assets/bundles && npm run -s build:app && npm run -s build:server && npm run -s build:integration",
-    "watch:app": "watchify app/assets/javascripts/application.coffee -d -v -o public/assets/bundles/dev-bundle.js",
-    "watch:server": "watchify app/assets/javascripts/react-server-side.js -d -v -o public/assets/bundles/dev-bundle-react-server-side.js",
-    "build:app": "browserify app/assets/javascripts/application.coffee -v -o public/assets/bundles/bundle.js",
-    "build:server": "browserify app/assets/javascripts/react-server-side.js -v -o public/assets/bundles/bundle-react-server-side.js",
-    "build:integration": "browserify app/assets/javascripts/integration-testbed.coffee -v -o public/assets/bundles/bundle-integration-testbed.js",
+    "watch:app": "NODE_ENV=development watchify app/assets/javascripts/application.coffee -d -v -o public/assets/bundles/dev-bundle.js",
+    "watch:server": "NODE_ENV=development watchify app/assets/javascripts/react-server-side.js -d -v -o public/assets/bundles/dev-bundle-react-server-side.js",
+    "build:app": "NODE_ENV=production browserify app/assets/javascripts/application.coffee -v -o public/assets/bundles/bundle.js",
+    "build:server": "NODE_ENV=production browserify app/assets/javascripts/react-server-side.js -v -o public/assets/bundles/bundle-react-server-side.js",
+    "build:integration": "NODE_ENV=production browserify app/assets/javascripts/integration-testbed.coffee -v -o public/assets/bundles/bundle-integration-testbed.js",
     "test": "npm run -s lint",
     "lint": "bash -c 'npm run -s coffeelint -- --quiet app/assets/javascripts/**/*.coffee app/assets/javascripts/react/**/*.cjsx && npm run -s standardlint -- {.,**}/*.js'",
-    "devtools": "npm run -s build-devtools && coffee --nodejs \"-r ./tmp/devtools.js\"",
-    "devtools-js": "npm run -s build-devtools && node -r ./tmp/devtools.js",
-    "build-devtools": "npm run -s browserify -- app/assets/javascripts/developer-tools.coffee > tmp/devtools.js",
+    "devtools": "NODE_ENV=development npm run -s build-devtools && coffee --nodejs \"-r ./tmp/devtools.js\"",
+    "devtools-js": "NODE_ENV=development npm run -s build-devtools && node -r ./tmp/devtools.js",
+    "build-devtools": "NODE_ENV=production npm run -s browserify -- app/assets/javascripts/developer-tools.coffee > tmp/devtools.js",
     "coffeelint": "coffeelint",
     "standardlint": "standard",
     "browserify": "browserify"
@@ -60,6 +60,8 @@
     "xhr": "^2.2.0"
   },
   "devDependencies": {
+    "babel-preset-react-app": "^0.2.1",
+    "babelify": "^7.3.0",
     "big-list-of-naughty-strings": "1.0.0",
     "brfs": "^1.4.3",
     "browserify": "^11.2.0",
@@ -70,14 +72,13 @@
     "coffee-react-transform": "3.3.0",
     "coffee-reactify": "4.0.0",
     "coffeelint": "^1.14.2",
-    "reactify": "1.1.1",
     "standard": "^6.0.7",
     "watchify": "^3.7.0"
   },
   "browserify": {
     "transform": [
+      "babelify",
       "coffee-reactify",
-      "reactify",
       "bulkify",
       "brfs"
     ],
@@ -87,8 +88,7 @@
   },
   "babel": {
     "presets": [
-      "es2015",
-      "react"
+      "react-app"
     ]
   },
   "author": "Max Albrecht <max.albrecht@zhdk.ch>",
