--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "jquery": "^2.2.1",
     "linkifyjs": "^2.0.0-beta.9",
     "local-links": "1.4.0",
-    "moment": "^2.11.2",
+    "lodash": "^4.16.2",
+    "moment": "^2.15.1",
     "pdfjs-dist": "^1.4.95",
     "po2json": "0.4.1",
     "qs": "^6.1.0",
     "react": "^15.0.2",
     "react-bootstrap": "^0.30.2",
+    "react-day-picker": "^2.4.1",
     "react-dom": "^15.0.2",
     "react-file-drop": "^0.1.8",
     "react-waypoint": "^3.1.0",
